--- a/kubewatch-in-cluster.yaml
+++ b/kubewatch-in-cluster.yaml
@@ -4,13 +4,21 @@ metadata:
   name: kubewatch
   namespace: default
 spec:
+  serviceAccountName: kubewatch
   containers:
-  - image: tuna/kubewatch:v0.0.1
+  - image: tpageforfunzies/kubewatcharmhf:v1
     imagePullPolicy: Always
     name: kubewatch
     volumeMounts:
     - name: config-volume
       mountPath: /root
+  - image: gcr.io/skippbox/kubectl:v1.3.0
+    args:
+      - proxy
+      - "-p"
+      - "8080"
+    name: proxy
+    imagePullPolicy: Always
   restartPolicy: Always
   volumes:
   - name: config-volume
