--- a/kubewatch-service-account.yaml
+++ b/kubewatch-service-account.yaml
@@ -4,9 +4,25 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: kubewatch
 rules:
-- apiGroups: [""]
-  resources: ["pods", "replicationcontrollers"]
-  verbs: ["get", "watch", "list"]
+- apiGroups:
+  - ""
+  - extensions
+  - apps
+  - batch
+  resources:
+  - pods
+  - jobs
+  - namespaces
+  - services
+  - deployments
+  - replicationcontrollers
+  - replicasets
+  - daemonsets
+  - configmaps
+  - secrets
+  verbs:
+  - list
+  - watch
 ---
 apiVersion: v1
 kind: ServiceAccount
