--- a/kubewatch-configmap.yaml
+++ b/kubewatch-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kubewatch
+  namespace: default
 data:
   .kubewatch.yaml: |
     namespace: "default"
